<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/activityNewLocation"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexandar.gdeveceras.NewLocationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView3"
        android:text="@string/selected_location"
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="Latitude"
        android:id="@+id/latitude"
        android:layout_above="@+id/location_type"
        android:layout_alignLeft="@+id/ratingBar"
        android:layout_alignStart="@+id/ratingBar"
        android:layout_marginBottom="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="Longitude"
        android:id="@+id/longitude"
        android:layout_alignTop="@+id/latitude"
        android:layout_alignRight="@+id/ratingBar"
        android:layout_alignEnd="@+id/ratingBar" />


    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:numStars="5"

        android:stepSize="1"
        android:layout_above="@+id/saveButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationName"
        android:hint="@string/location_name"

        android:layout_above="@+id/favourite_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/saveButton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/cancelButton"
        android:layout_alignTop="@+id/saveButton"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_favourite_button"
        android:id="@+id/favourite_button"
        android:layout_above="@+id/ratingBar"
        android:layout_alignLeft="@+id/locationName"
        android:layout_alignStart="@+id/locationName"
        android:layout_marginBottom="26dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location_type"
        android:layout_above="@+id/locationName"
        android:layout_alignRight="@+id/locationName"
        android:layout_alignEnd="@+id/locationName"
        android:layout_alignLeft="@+id/locationName"
        android:layout_alignStart="@+id/locationName" />


</RelativeLayout>
